exports[`Actions: search Fetching users when making a request with a search term should fetch the results from the API and normalize them 1`] = `
Array [
  Object {
    "query": "alecrust",
    "type": "SEARCH_REQUEST",
  },
  Object {
    "entities": Object {
      "users": Object {
        "123": Object {
          "avatar_url": "foo",
          "id": 123,
          "login": "alecrust",
        },
        "456": Object {
          "avatar_url": "foo",
          "id": 456,
          "login": "simonsmith",
        },
      },
    },
    "query": "alecrust",
    "totalResults": 2,
    "type": "SEARCH_SUCCESS",
    "users": Array [
      123,
      456,
    ],
  },
]
`;

exports[`Actions: search when an error occurs during a request should dispatch a SEARCH_FAILURE action 1`] = `
Object {
  "message": "something broke",
  "response": Object {
    "statusText": "404",
  },
  "type": "SEARCH_FAILURE",
}
`;

exports[`Actions: search when receiving a set of users should dispatch a SEARCH_SUCCESS action with the necessary data 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "123": Object {
        "id": 123,
        "login": "foo",
        "other": "test",
      },
      "456": Object {
        "id": 456,
        "login": "baz",
        "other": "test",
      },
    },
  },
  "query": "query",
  "totalResults": 2,
  "type": "SEARCH_SUCCESS",
  "users": Array [
    123,
    456,
  ],
}
`;

exports[`Actions: search when requesting users via a search term should dispatch a SEARCH_REQUEST action 1`] = `
Object {
  "query": "simon",
  "type": "SEARCH_REQUEST",
}
`;
